# BichoLabBack

./: README.md  pyproject.toml
app/: auth.py  classification.py  database.py  main.py  models.py  routes.py
config/: client_secret.json  credentials.json  insect-clasification-3fafb8f5d39a.json
